--- a/config.json
+++ b/config.json
@@ -3,9 +3,13 @@
   "description" : "description",
   "author" : "author",
   "icon" : "icon",
-  "mainlink" : "mainlink",
+  "mainlink" : "",
   "citation" : "citation",
   "footer_file" : "footer.md",
   "index_file" : "index.md",
-  "sidebar_file" : "sidebar.md"
+  "sidebar_file" : "sidebar.md",
+
+  "language_fields" : ["Name", "Glottocode", "Latitude", "Longitude", "Family"],
+  "parameter_fields" : ["Name", "Concepticon_ID", "Concepticon_Gloss"]
+
 }
