Add markdown support

--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "title" : "chaconarawakan",
-  "description" : "description",
-  "author" : "author",
-  "icon" : "icon",
-  "mainlink" : "",
-  "citation" : "citation",
+  "title" : "Static CLDF Demo",
+  "description" : "A demo site for the `staticcldf` project.",
+  "author" : "Tiago Tresoldi",
+  "icon" : "https://clts.clld.org/clld-static/images/favicon.ico",
+  "mainlink" : "https://static-cldf.netlify.com",
+  "citation" : "Chacon, Thiago C. (2017): Arawakan and Tukanoan contacts in Northwest Amazonia prehistory. PAPIA 27(2). 237-265.",
   "footer_file" : "footer.md",
   "index_file" : "index.md",
   "sidebar_file" : "sidebar.md",
