--- a/config.json
+++ b/config.json
@@ -11,6 +11,7 @@
   "sidebar_file" : "sidebar.md",
 
   "language_table" : ["Name", "Glottocode", "Latitude", "Longitude", "Family"],
-  "parameter_table" : ["Name", "Concepticon_ID", "Concepticon_Gloss"]
+  "parameter_table" : ["Name", "Concepticon_ID", "Concepticon_Gloss"],
+  "form_table" : ["ID", "Value", "Form", "Segments", "Source"]
 
 }
